--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Publish as single file
       run: |
         cd src
-        dotnet publish .\PySenti.Copilot.App\PySenti.Copilot.App.csproj -c Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:PublishReadyToRun=true /p:Version=${{ env.VERSION }}
+        dotnet publish .\PySenti.Copilot.App\PySenti.Copilot.App.csproj -c Release -r win-x64 /p:Version=${{ env.VERSION }}
 
     - name: Upload release artifact
       uses: actions/upload-artifact@v4
